--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,14 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_launcher_icons:
+  image_path: "assets/icon/icon.png"
+  android: "launcher_icon"
+  ios: true
+  min_sdk_android: 16 # android min sdk min:16, default 21
 
 flutter:
   uses-material-design: true
